# margin-tool

./: .env.example  .gitignore  README.md  SETUP_CHECKLIST.md  config.yaml.example  pyproject.toml
src/margin/: cli.py  config.py  email_client.py  jira_client.py  lookup.py  models.py  reader.py  tracker.py
templates/: margin_email.html
