[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "margin-tool"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.28",
    "msal>=1.24",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
margin-tool = "margin.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
